#49 all junit tests pass and compile errors fixed - now need to test with swaggerui